firefox overflow fix

--- a/sass/_sec-right.scss
+++ b/sass/_sec-right.scss
@@ -162,6 +162,7 @@
                     height: 2px;
                     display: block;
                     background: red;
+                    display: none;
                 }
             }
         }
